@@ -1,3 +1,6 @@
+**2013 Mar 01**
+Apriori Implementation: Show file suggestions while browsing
+
 **2013 Feb 28**
 fixed memory leaks in formatting strings in metadata
 fixed memory leaks in freeind metadata structures
